Se commitean cambios en estadisticas, se agrega filtrado por registro de caja